--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@wdio/cli": "^8.31.1",
     "@wdio/cucumber-framework": "^8.31.1",
     "@wdio/local-runner": "^8.31.1",
-    "@wdio/spec-reporter": "^8.31.1"
+    "@wdio/spec-reporter": "^8.31.1",
+    "wdio-wait-for": "^3.0.11"
   },
   "dependencies": {
     "@cucumber/cucumber": "^10.3.1"
